fix(react): update modal overlay background color for improved visibility and bump version to 0.0.5-beta.21

--- a/packages/css/react/modal.css
+++ b/packages/css/react/modal.css
@@ -19,7 +19,7 @@
 }
 
 .cocso-modal-overlay {
-  background-color: var(--color-palette-blackalpha-10);
+  background-color: var(--color-palette-blackalpha-25);
   position: fixed;
   inset: 0;
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
